--- a/configs/protocol.yaml
+++ b/configs/protocol.yaml
@@ -77,6 +77,7 @@ factors:
     sue_threshold: 0.5
     lookback_quarters: 8
     date_shift_days: 0
+    event_max_age_days: 5
     lag_days: null
     use_shifted_factor: true
   reversal:
@@ -90,12 +91,14 @@ factors:
       roe: 1.0
       gross_margin: 1.0
       cfo_to_assets: 1.0
+    max_staleness_days: 270
     lag_days: null
   value:
     weights:
       earnings_yield: 1.0
       fcf_yield: 1.0
       ev_ebitda_yield: 1.0
+    max_staleness_days: 270
     lag_days: null
   low_vol:
     lag_days: null
