--- a/configs/strategies/pead_v1.yaml
+++ b/configs/strategies/pead_v1.yaml
@@ -24,5 +24,6 @@ factors:
     sue_threshold: 0.5
     lookback_quarters: 8
     date_shift_days: 0
+    use_trading_day_shift: true
     event_max_age_days: 5
     use_shifted_factor: true
