--- a/configs/strategies/combo_v2_inst.yaml
+++ b/configs/strategies/combo_v2_inst.yaml
@@ -24,8 +24,14 @@ neutralization:
   signal_rank: false
   signal_winsor_pct_low: 0.01
   signal_winsor_pct_high: 0.99
+  signal_missing_policy: "drop"
   signal_neutralize_size: true
   signal_neutralize_beta: true
+
+universe:
+  min_market_cap: 1000000000.0
+  min_dollar_volume: 2000000.0
+  min_price: 5.0
 
 factors:
   weights:
